--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-no-use-extend-native": "^0.4.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-unicorn": "^9.1.0",
+    "npm-watch": "^0.6.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.3.1"
@@ -39,6 +40,7 @@
     "@emotion/core": "^10.0.10",
     "emotion": "^10.0.9",
     "react": "^16.5.2",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.1",
     "react-router-transition": "^1.2.1"
